<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/movie_view_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/movie_view_title"/>

    <CheckBox
        android:id="@+id/movie_view_checkBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_view_checkBox"/>

    <EditText
        android:id="@+id/movie_view_extraInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/movie_view_extraInfo"/>
</LinearLayout>