<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_list"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/empty_list_add_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_list_addButton" />
        <Button
            android:id="@+id/empty_list_update_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_list_updateButton" />
    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</FrameLayout>